changes to support java21 source code and java21 docker image in jenkins